# Archtoys

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  archtoys.install
.github/workflows/: appimage.yml  release.yml
packaging/: archtoys.desktop  build-appimage.sh
src/: main.rs
ui/: app.slint
