[package]
name = "color-picker"
version = "0.1.6"
edition = "2021"


[dependencies]
slint = { version = "1.15.0", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
arboard = "3.2"
rand = "0.8"
palette = "0.7"
device_query = "1.1"
global-hotkey = "0.4"
scrap = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ksni = { version = "0.3.3", default-features = false, features = ["blocking", "async-io"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }

[build-dependencies]
slint-build = "1.15.0"
